feat: 新增vue代码片段

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
       {
         "language": "javascript",
         "path": "./snippets/js.code-snippets"
+      },
+      {
+        "language": "vue",
+        "path": "./snippets/vue.code-snippets"
       }
     ]
   }
